# Mania-Vision

./: README.md  test.py
cli/: makefile  test.txt
cli/src/: hitmap.h  main.cpp  maniaparser.cpp  maniaparser.h  maniaplayer.cpp  maniaplayer.h
gui/: CMakeLists.txt  main.cpp
gui/gui/: consolebox.cpp  consolebox.h  mainwindow.cpp  mainwindow.h  selectbox.cpp  selectbox.h  titlebar.cpp  titlebar.h  videoplayer.cpp  videoplayer.h
gui/utils/: processhandler.cpp  processhandler.h  shorthand.h  shorthand.hpp  utils.cpp  utils.h
handDetect/: README.txt  main.py  test.txt
src/cli/: test.txt
src/cli/python/: mania-vision-cli.py
src/cli/src/: maniaparser.h  maniaplayer.h
src/gui/assets/program/: icon.rc
src/gui/python/: mania-vision-gui.py
src/gui/src/: main.cpp
src/gui/src/gui/: mainwindow.h  selectbox.cpp
src/gui/src/utils/: keyhandler.cpp  keyhandler.h  processhandler.h  shorthand.hpp  utils.cpp
src/python/: requirements.txt
src/src/: CMakeLists.txt
src/src/gui/: mainwindow.cpp  selectbox.h  titlebar.cpp  titlebar.h  videoplayer.cpp
src/src/utils/: maniaplayer.cpp  maniaplayer.h  maniaplayerkey.cpp  maniaplayerkey.h  processhandler.cpp
